[package]
name = "fisco-bcos-cli"
version = "0.4.0"
authors = ["Tom.Huang <hzlhu.dargon@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/atomic-world/fisco-bcos-rust-sdk"
description = "FISCO BCOS CLI in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
fancy-regex = "0.7.1"
home = "0.5.3"
futures = "0.3"
rustyline = "8.2.0"
tokio = { version = "1", features = ["full"] }
fisco-bcos-service = { version = ">=0.4, <1", path = "../service" }

[[bin]]
name = "fisco-bcos-cli"
path = "src/main.rs"