[package]
name = "fisco-bcos-service"
version = "0.1.0"
authors = ["Tom.Huang <hzlhu.dargon@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/atomic-world/fisco-bcos-rust-sdk"
description = "Rust SDK for FISCO BCOS."
links = "tassl"
build = "build/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
libc = "0.2"
pem = "0.8"
hex = "0.4"
ethabi = "14.1.0"
rlp = "0.5.1"
cfg-if = "1.0.0"
keccak-hash = "0.8.0"
ethereum-types = "0.12.0"
wedpr_l_libsm = "0.3.5"
wedpr_l_utils = "1.1.0"
wedpr_l_crypto_hash_sm3 = "1.1.0"
wedpr_l_crypto_signature_sm2 = "1.1.0"
wedpr_l_crypto_hash_keccak256 = "1.1.0"
wedpr_l_crypto_signature_secp256k1 = "1.1.0"
thiserror = "1.0"
serde = "1.0"
serde_json = "1.0"
async-trait = "0.1.50"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

[build-dependencies]
cc = "1.0"
autocfg = "1.0"
tassl-src = "0.1.4"