[package]
name = "fisco-bcos-cli"
version = "0.1.0"
authors = ["Tom.Huang <hzlhu.dargon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1", features = ["full"] }
fisco-bcos-service = { version = "0.1.0", path = "../service" }

[[bin]]
name = "fisco-bcos"
path = "src/main.rs"