[package]
name = "fisco-bcos-service"
version = "0.1.0"
authors = ["Tom.Huang <hzlhu.dargon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
thiserror = "1.0"
serde_json = "1.0"
num-bigint = "0.3.2"
async-trait = "0.1.50"
openssl = "0.10.35"
tokio-openssl = "0.6.2"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }