[package]
name = "fisco-bcos-service"
version = "0.1.0"
authors = ["Tom.Huang <hzlhu.dargon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
hex = "0.4"
ethabi = "14.1.0"
rlp = "0.5.1"
keccak-hash = "0.8.0"
ethereum-types = "0.12.0"
wedpr_l_utils = "1.1.0"
wedpr_l_crypto_hash_keccak256 = "1.1.0"
wedpr_l_crypto_signature_secp256k1 = "1.1.0"
thiserror = "1.0"
serde_json = "1.0"
async-trait = "0.1.50"
openssl = "0.10.35"
hyper = { version = "0.14", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }